[gd_scene load_steps=10 format=2]

[ext_resource path="res://Public/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Public/Utilitarios/botaoOpcao.png" type="Texture" id=2]
[ext_resource path="res://Public/Utilitarios/botaoOpcaoSelecionado.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Utilitarios/Gameover.gd" type="Script" id=4]
[ext_resource path="res://Public/Sounds-effects/tense-sad-piano-111679.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "GameOverFade"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureButton2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Gameover:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureButton2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Gameover:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1028.0
margin_bottom = 602.0
color = Color( 0, 0, 0, 1 )

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 416.0
margin_top = 284.0
margin_right = 516.0
margin_bottom = 316.0
rect_scale = Vector2( 2, 2 )
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 19.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Retry"
align = 1
valign = 1

[node name="TextureButton2" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 416.0
margin_top = 384.0
margin_right = 516.0
margin_bottom = 416.0
rect_scale = Vector2( 2, 2 )
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="TextureButton2"]
margin_left = 19.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "GameOverFade"
anims/GameOverFade = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
autoplay = true

[node name="Gameover" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 171.0
margin_top = 113.0
margin_right = 853.0
margin_bottom = 217.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Gameover"]
margin_right = 682.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
